--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <body>
 
         <script src="p5.min.js"></script>
+        <script src="gl-matrix-min.js"></script>
         <script src="Cell.js"></script>
         <script src="index.js"></script>
     </body>
