--- a/index.html
+++ b/index.html
@@ -2,9 +2,18 @@
 <html>
     <head>
         <title>3D Mine Sweeper</title>
+        <link href="https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="index.css" />
     </head>
     <body>
-
+        <h1>3D Mine Sweeper</h1>
+        <div class="instructions">
+            <p>Use arrow keys to move in 2D. Use , and . to move backward and forward. Use spacebar to select a cube.</p>
+            <p>Use the mouse to move the camera. Left click and drag to rotate.</p>
+            <p>Right click and drag to strafe left/right and move forward/back.</p>
+            <p>Mouse wheel zoomes in and out.</p>
+        </div>
+        <main></main>
         <script src="p5.min.js"></script>
         <script src="gl-matrix-min.js"></script>
         <script src="Cell.js"></script>
