--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <p>Use the mouse to move the camera. Left click and drag to rotate.</p>
             <p>Right click and drag to strafe left/right and move forward/back.</p>
             <p>Mouse wheel zoomes in and out.</p>
+            <p>View the source code <a href="https://github.com/jc1812/3DMineSweeper">here</a>.</p>
         </div>
         <main></main>
         <script src="p5.min.js"></script>
