--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <body>
         <h1>3D Mine Sweeper</h1>
         <div class="instructions">
-            <p>Use arrow keys to move in 2D. Use , and . to move backward and forward. Use spacebar to select a cube.</p>
+            <p>Arrow keys change selection. Use , and . to change layer.</p>
+            <p>Spacebar to select a cube. Enter to mark a cube.</p>
             <p>Use the mouse to move the camera. Left click and drag to rotate.</p>
             <p>Right click and drag to strafe left/right and move forward/back.</p>
-            <p>Mouse wheel zoomes in and out.</p>
+            <p>Mouse wheel zooms in and out.</p>
             <p>View the source code <a href="https://github.com/jc1812/3DMineSweeper">here</a>.</p>
         </div>
         <main></main>
